	* General exceptions are now caught in the view.
	* Component debug listing is now sorted alphabetically.
	* NULL is now handled more gracefully in the Model.
	* Set the install redirect to be a 302.  Should help prevent FF from redirecting endlessly
	  on new installs.
	* Upgraded phpmailer to 5.2.4
	* Using "getKeyName" for components, should fix the name/directory issues.

Core Plus 2.4.6.3

	* More fixes in the updater UI.
	* New methods to get the changed files in a given component.
	* Packager now displays which component has local changes, (needs to be packaged).
	* Installer will now refuse to update a component with local changes.
	--Charlie Powell <charlie@eval.bz>  Sun, 24 Feb 2013 15:42:08 -0500

Core Plus 2.4.6.2

	* FTP Fixes in core.
	* Installer is more efficient.
	* Component->disable now flags the component as disabled on that same pageload.
	* Core better handles upgrade errors for components.
	--Charlie Powell <charlie@eval.bz>  Sun, 24 Feb 2013 14:14:27 -0500

Core Plus 2.4.6.1

	* Updates to the installer, primarily more verbose output and reloading the package list on
	  a successful installation via the UI.
	* Removed some legacy code from the packager.
	--Charlie Powell <charlie@eval.bz>  Sun, 24 Feb 2013 12:53:22 -0500

Core Plus 2.4.6

	* Minor fixes in the updater including CGI mode support and correctly handling empty
	  "operation" requests.
	* Do not try to parse userconfigs if that model doesn't exist.  Fixes user component
	  updates.
	* Support for the new userconfig features.
	* Changed how the reload method works slightly.  It now sends a 302 header along with the
	  location.
	* If a form action returns the same page that it is currently on, the form system will
	  reload the page instead of trying to redirect.
	* Fixed the smarty issue of SMARTY_DIR already being defined.
	--Charlie Powell <charlie@eval.bz>  Fri, 22 Feb 2013 15:42:17 -0500

Core Plus 2.4.5

	* Made the hover controls enabled by default